fix text overflow in header and latest rounds

--- a/style.css
+++ b/style.css
@@ -861,6 +861,7 @@ nav {
   .latest-rounds {
     margin: 10px auto;
     width: 100%;
+    padding: 10px;
   }
 
   .rounds-header {
@@ -948,6 +949,10 @@ nav {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .header-right-contents {
+    top: 35%;
+  }
+
   .latest-news {
     width: 100%;
   }
@@ -964,6 +969,11 @@ nav {
   .latest-rounds {
     width: 100%;
     margin: 0;
+  }
+
+  .rounds-header ul {
+    position: absolute;
+    right: 10px;
   }
 
   .rounds-main {
